# deep-search-about-company-profile

./: example.py  pyproject.toml  readme.md
company_profile_harvester/: __init__.py  cli.py  harvester.py  scraper.py  searchers.py  utils.py
