[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-search-about-company-profile"
version = "0.1.0"
description = "Search & scrape company profiles (Google, Bing, DuckDuckGo)"
readme = "README.md"
authors = [{name="Wan Muhafidz Faldi"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "duckduckgo-search>=6.3.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=5.2.1",
  "trafilatura>=1.12.0",
  "dateparser>=1.2.0",
  "tqdm>=4.66.4",
]

[project.scripts]
company-profile = "company_profile_harvester.cli:main"

[tool.setuptools.packages.find]
where = ["."]